# agi-concepts

./: .gitignore  README.md  README_RU.md  SUMMARY_STATE_v1.md  SUMMARY_STATE_v2.md  TASK.md  addintional_reference.md  pyproject.toml
analysis_log_scripts/: 01_overview.py  02_phase_timeline.py  03_thoughts_evolution.py  04_internal_stimuli.py  05_hysteresis_analysis.py  06_runtime_deltas.py  07_responses_analysis.py  README.md
config/: default.yaml  flags.yaml
logs/: run_20260415_012921.json  run_20260415_013309.json  run_20260415_014229.json  run_20260415_015016.json  run_20260415_015401.json  run_20260415_015531.json  run_20260415_015723.json  run_20260415_015745.json  run_20260415_015930.json  run_20260415_020224.json  run_20260415_020434.json  run_20260415_020637.json  run_20260415_025048.json  run_20260415_025526.json  run_20260415_031715.json  run_20260415_103559.json  run_20260415_110639.json  run_20260415_114250.json
src/: main.py
src/agents/: base.py  emotion.py  memory.py  perception.py  planning.py  reflection.py
src/config/: flags.py  loader.py  settings.py
src/core/: consciousness_loop.py  event_bus.py  hysteresis.py  runtime_state.py
src/logging/: setup.py
src/team/: consciousness_team.py
src/tui/: app.py
src/tui/screens/: flags.py  main.py  monitor.py
src/tui/widgets/: chat_input.py  log_panel.py  state_panel.py
tests/: test_flags.py  test_hysteresis.py  test_runtime_state.py
